# SanTuan

./: .gitignore  README.md
client/app/: pubspec.yaml
client/app/lib/: app.dart  main.dart
client/app/lib/di/: service_locator.dart
client/assets/characters/default/: manifest.json
client/assets/mock_data/: emotions.json
client/demo/: README.md  pubspec.yaml
client/demo/android/app/: build.gradle
client/demo/lib/: character_base.dart  main.dart  overlay_main.dart  pet_character.dart  pet_skin.dart  pet_sprite.dart
client/demo/lib/skins/: ghost_skin.dart  robot_skin.dart  tuanzi_skin.dart
client/demo/macos/Runner/: AppDelegate.swift  MainFlutterWindow.swift
client/demo/macos/Runner.xcodeproj/: project.pbxproj
client/demo/test/: widget_test.dart
client/demo/windows/: CMakeLists.txt
client/demo/windows/runner/: Runner.rc  main.cpp  win32_window.cpp
protocol/schemas/: command.schema.json  emotion.schema.json  event.schema.json  rl_episode.schema.json
services/: pyproject.toml  requirements.txt
services/emotion_cache/: __init__.py  change_detector.py  cloud_syncer.py  ema_filter.py  pipeline.py  ring_buffer.py
services/gemini_bridge/: __init__.py  conversation.py  memory_manager.py  personality.py
services/orchestrator/: __init__.py  router.py  server.py  service_registry.py
services/perception/: __init__.py  emotion_extractor.py  face_analyzer.py
services/rl_trainer/: __init__.py  data_collector.py  episode_buffer.py  reward_model.py
tools/codegen/: generate_types.py
tools/docker/: Dockerfile.services
tools/scripts/: dev_start.sh
(+4 files in other folders)
