[project]
name = "santuan-services"
version = "0.1.0"
description = "Santuan AI Services - 情绪感知、对话、RL训练"
requires-python = ">=3.11"

dependencies = [
    "websockets>=14.0",
    "numpy>=1.26",
    "pydantic>=2.10",
]

[project.optional-dependencies]
perception = [
    "opencv-python>=4.10",
    # "libreface",  # V1.0 接入
]
gemini = [
    "google-generativeai>=0.8",
]
rl = [
    "torch>=2.5",
    "gymnasium>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
